# 9m_Test

./: .dockerignore  .gitignore  .venv  Dockerfile  README.md  RESULTS.md  docker-compose.yml  pyproject.toml  simulate_array.py
.devcontainer/: devcontainer.json
audio/: README.md
docs/: algorithms.md  architecture.md  configuration.md  index.md  physics.md  studies.md  usage.md
examples/: analyse_3d_traces.py  diagnose_3d_mfp.py  diagnose_mfp_bpm.py  domain.example.json  estimate_3d_grid.py  extract_array_traces.py  layered.example.json  legs.example.json  run_all_examples.py  run_fdtd.py  run_fdtd_3d.py  run_full_pipeline.py  run_full_pipeline_3d.py  run_pipeline.py  run_valley.sh  run_valley_3d.sh  run_wind_circular.sh  source_model.example.json  valley.example.json
src/acoustic_sim/: __init__.py  __main__.py  backend.py  cli.py  config.py  detection_main.py  detection_main_3d.py  domains.py  domains_3d.py  fdtd.py  fdtd.py.bak  fdtd_3d.py  fire_control.py  fire_control_3d.py  forward_3d.py  io.py  model.py  model_3d.py  noise.py  plotting.py  plotting_3d.py  processor.py  processor_3d.py  raytrace.py  receivers.py  receivers_3d.py  sampling.py  setup.py  solver.py  sources.py  sources_3d.py  (+4 more)
src/acoustic_sim.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: calibrate_rms_range.py  debug_accuracy.py  debug_fire_control.py  debug_tracker.py  run_detection_eval.py  test_3d_extension.py  test_classification.py  test_demo.py  test_evaluation.py  test_fdtd_3d.py  test_fusion.py  test_maneuver.py  test_signal_threshold.py
(+7 files in other folders)
